# alter2000.github.io

./: .gitignore  .gitmodules  404.md  CNAME  Gemfile  _config.yml  about.html  about.md  cabal.project  default.nix  gemset.nix  index.html  index.md  ineedanew-pw.cabal  keybase.txt  package-lock.json  package.json  pnpm-lock.yaml  portfolio.html  portfolio.md  resume.html  resume.yml  semantic.json  shell.nix  site.hs
_data/: navigation.yml  resume.yml
_drafts/: 2019-02-16-new-site.md  nextcloud-tutorial-1.md  nixos.md  stories.md  trust.md  vacation.md
_includes/: footer.html  head.html  header.html  read_time.html  sidebar.html  skills.html  social-vcs.html  social.html
_layouts/: archive.html  default.html  home.html  post.html  slides.html
_posts/: 2016-09-13-hello-hell.md  2016-09-19-low-expectations.md  2016-11-29-nje-foto-nje-fabul.md  2016-12-01-why-floss.md  2017-08-14-nextcloud-tutorial.md  2017-09-17-living-on-edge.md  2017-12-18-ramblings.md  2018-01-03-old-years-solutions.md  2018-02-14-updates.md  2018-04-16-ramblings-pt-2.md  2018-05-14-5-days-to-OSCAL.md  2018-12-20-welcome-to-jekyll.markdown  2019-02-13-nixos.md  2019-04-04-thoughts-on-thoughts-on-words.md  2019-04-04-toughts-on-thoughts-on-words.md  2019-04-18-youtube-loops.md
_sass/: minima.scss
_sass/minima/: _base.scss  _layout.scss  _syntax-highlighting.scss
_slides/: reproducible-infra_2020.html
assets/css/: lanyon.css  resume.css
nix/: gemset.nix  shell.nix
slides/: nix_2019.html  reproducible-infra_2020.html
