cabal-version:       >=1.10
name:                ineedanew-pw
version:             0.1.0.0
synopsis:            files building my site, https://ineedanew.pw
-- description:
-- bug-reports:
-- license:
license-file:        LICENSE
author:              Jor Bashllari
maintainer:          altnate2000@gmail.com
-- copyright:
-- category:
build-type:          Simple

executable ineedanew-pw
  main-is:             site.hs
  -- other-modules:
  -- other-extensions:
  build-depends: base >=4.13 && <5
               , slick
               , pandoc
               , text
               , aeson
               , shake
               , lens
               , mustache
  hs-source-dirs:      .
  ghc-options:      -threaded
  default-language:    Haskell2010
